unified hyperlit-div container... hypercites, hyperlights and citatiosn open in same div, fixing overlap issue...

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -289,6 +289,7 @@ pre code {
 
 hr {
     border-color: #EE4A95;
+    opacity: 0.5;
 }
 
 
